syntax = "proto3";

package proto.rpc;

import "github.com/ethresearch/sharding-p2p-poc/pb/message/message.proto";

service Poc {
  rpc Identify(RPCIdentifyRequest) returns (RPCIdentifyResponse) {}
  rpc AddPeer (RPCAddPeerRequest) returns (RPCPlainResponse) {}
  rpc DiscoverShard(RPCListTopicPeerRequest) returns (RPCListTopicPeerResponse) {}
  rpc SubscribeShard(RPCSubscribeShardRequest) returns (RPCPlainResponse) {}
  rpc UnsubscribeShard(RPCUnsubscribeShardRequest) returns (RPCPlainResponse) {}
  rpc GetSubscribedShard(RPCGetSubscribedShardRequest) returns (RPCGetSubscribedShardResponse) {}
  rpc BroadcastCollation(RPCBroadcastCollationRequest) returns (RPCPlainResponse) {}
  rpc SendCollation(RPCSendCollationRequest) returns (RPCPlainResponse) {}
  rpc StopServer(RPCStopServerRequest) returns (RPCPlainResponse) {}
  rpc Send (SendRequest) returns (SendResponse) {}
  rpc ListPeer(RPCListPeerRequest) returns (RPCListPeerResponse) {}
  rpc ListTopicPeer(RPCListTopicPeerRequest) returns (RPCListTopicPeerResponse) {}
  rpc RemovePeer(RPCRemovePeerRequest) returns (RPCPlainResponse) {}
  rpc Bootstrap(RPCBootstrapRequest) returns (RPCPlainResponse) {}
}

// Request
message RPCIdentifyRequest {
}
message RPCIdentifyResponse {
  string peerID = 1;
  repeated string multiAddrs = 2;
}

message RPCAddPeerRequest {
  string ip = 1;
  int64 port = 2;
  int64 seed = 3;
}

message RPCSubscribeShardRequest {
  int64 numShardPeerToConnect = 1;
  repeated int64 shardIDs = 2;
}

message RPCUnsubscribeShardRequest {
  repeated int64 shardIDs = 1;
}

message RPCGetSubscribedShardRequest {
}
message RPCGetSubscribedShardResponse {
  repeated int64 shardIDs = 2;
}

message RPCBroadcastCollationRequest {
  int64 shardID = 1;
  int64 number = 2;
  int64 size = 3;
  int64 period = 4;
}

message RPCSendCollationRequest {
  proto.message.Collation collation = 1;
}

message RPCStopServerRequest {
}

message RPCPlainResponse {
}

message SendRequest {
  string peerID = 1;  // empty string indicates it is a broadcast
  string topic = 2;  // topic for broadcast usage
  int64 msgType = 3;  // message type of the data
  bytes data = 4;
}

message SendResponse {
  bytes data = 2;
}

message RPCListPeerRequest {
}
message RPCListPeerResponse {
  repeated string peers = 2;
}

message RPCListTopicPeerRequest {
  repeated string topics = 1;
}
message RPCListTopicPeerResponse {
  map<string, proto.message.Peers> topicPeers = 2;
}

message RPCRemovePeerRequest {
  string peerID = 1;
}

message RPCBootstrapRequest {
  bool flag = 1;
  string bootnodesStr = 2;
}
